--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 body {
     height: 100%;
-    background-color: #F0F0F0;
+    background-color: #171717;
     font-weight: 400;
     font-family: 'Inter', sans-serif;
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    overflow: hidden;
+    overflow-y: auto;
 }
 
 .contenedor {
@@ -21,7 +25,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    box-sizing: border-box;
 }
 
 .logo1 {
@@ -49,9 +52,9 @@ body {
     padding: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 18px;
-    color: #333333;
-    background-color: #FFFFFF;
-    border: 2px solid #0C1A1A; 
+    color: #E0E0E0;
+    background-color: #1F1F1F;
+    border: 2px solid #3A3A3A; 
     border-radius: 10px;
     resize: none;
     box-sizing: border-box;
@@ -60,7 +63,7 @@ body {
 .informacion {
     margin-top: 10px;
     font-size: 14px;
-    color: #495057; 
+    color: #AAAAAA; 
 }
 
 .contenedor-botones {
@@ -74,17 +77,17 @@ body {
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 8px;
-    border: 2px solid #0C1A1A;
-    color: #FFFFFF; 
-    background-color: #0C1A1A; 
+    border: 2px solid #3A3A3A;
+    color: #171717; 
+    background-color:  #6ACFC7; 
     cursor: pointer;
     transition: transform 0.2s;
 }
 
 .boton-transparente {
     background-color: transparent;
-    color: #0C1A1A; 
-    border: 2px solid #0C1A1A; 
+    color:  #6ACFC7; 
+    border: 2px solid  #6ACFC7; 
 }
 
 .boton:hover {
@@ -92,7 +95,8 @@ body {
 }
 
 .boton-transparente:hover {
-    background-color: #6ACFC7;
+    background-color: #3A3A3A;
+    color: #FFFFFF;
 }
 
 .boton:active {
@@ -104,8 +108,8 @@ body {
     max-width: 600px;
     margin: auto;
     margin-top: 40px;
-    background-color: #FFFFFF; 
-    border: 2px solid #0C1A1A;
+    background-color: #1F1F1F; 
+    border: 2px solid #3A3A3A;
     border-radius: 10px;
     padding: 20px;
     display: flex;
@@ -129,29 +133,29 @@ body {
 
 .texto-aviso {
     font-size: 20px;
-    color: #0C1A1A;
+    color: #6ACFC7;
     font-weight: 700;
     margin-top: 20px;
 }
 
 .texto {
     font-size: 16px;
-    color: #495057; 
+    color: #AAAAAA; 
     margin-top: 10px;
     text-align: center;
 }
 
 .boton-salida {
     margin-top: 20px;
-    background-color: #FFFFFF; 
-    border: 2px solid #0C1A1A; 
-    color: #0C1A1A; 
+    background-color: #6ACFC7; 
+    border: 2px solid #3A3A3A; 
+    color: #FFFFFF; 
     font-size: 16px;
 }
 
 .boton-salida:hover {
-    background-color: #E0E0E0;
-    color: #0C1A1A; 
+    background-color:  #5ABFB7;
+    color: #FFFFFF; 
 }
 
 .boton-salida:active {
@@ -163,14 +167,14 @@ footer {
     text-align: center;
     margin-top: auto;
     padding: 20px 0;
-    background-color: #F0F0F0; 
-    font-size: 202px;
-    color: #0C1A1A; 
+    background-color: #171717; 
+    font-size: 14px;
+    color: #6ACFC7; 
     font-weight: bold;
 }
 
 footer a {
-    color: #0C1A1A; 
+    color: #6ACFC7; 
     margin-left: 10px;
     text-decoration: none;
     font-size: 14px;
